origin/amenities-all-fix

--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -1,90 +1,80 @@
-<section class="amenities__section">
+<section class="amenities">
   <div class="container">
     <h2 class="amenities__title">Зручності у номері</h2>
-
-    <p class="amenities__subdiscription">
+    <p class="amenities__title-text">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
       Velit officia consequat duis enim velit mollit. Exercitation veniam
       consequat sunt nostrud amet.
     </p>
-
-    <ul class="list">
-      <li class="title">
+    <ul class="amenities__items">
+      <li class="amenities__box">
         <h3 class="amenities__subtitle">Загальні</h3>
-        <div class="amenities__box">
+        <div class="amenities__item-discription">
           <p class="amenities__discription">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
             sint. Velit officia consequat duis enim velit mollit. Exercitation
             veniam consequat sunt nostrud amet.
           </p>
-          <div class="amenities__box-second">
-            <p class="amenities__discription">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint. Velit officia consequat duis enim velit mollit.
-              Exercitation veniam consequat sunt nostrud amet.
-            </p>
-          </div>
+          <p class="amenities__text">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
         </div>
       </li>
-      <li class="title">
+      <li class="amenities__box">
         <h3 class="amenities__subtitle">Ванна кімната</h3>
-        <div class="amenities__box-second">
-          <p class="amenities__discription-additional">
+        <div class="amenities__item-discription">
+          <p class="amenities__discription">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
             sint. Velit officia consequat duis enim velit mollit. Exercitation
             veniam consequat sunt nostrud amet.
           </p>
-
-          <div class="amenities__box-second">
-            <p class="amenities__discription">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint. Velit officia consequat duis enim velit mollit.
-              Exercitation veniam consequat sunt nostrud amet.
-            </p>
-          </div>
+          <p class="amenities__text">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
         </div>
       </li>
-      <li class="title">
+      <li class="amenities__box">
         <h3 class="amenities__subtitle">Спальня</h3>
-        <div class="amenities__box">
-          <p class="amenities__discription">
+        <div class="amenities__item-discription">
+          <p class="amenities__text">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
             sint.
           </p>
         </div>
       </li>
-      <li class="title">
+      <li class="amenities__box">
         <h3 class="amenities__subtitle">Кухня</h3>
-        <div class="amenities__box">
+        <div class="amenities__item-discription">
           <p class="amenities__discription">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
             sint.
           </p>
-          <p class="amenities__discription">
+          <p class="amenities__text">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
             sint.
           </p>
         </div>
       </li>
-      <li class="title">
+      <li class="amenities__box">
         <h3 class="amenities__subtitle">Медіа</h3>
-        <div class="amenities__box">
-          <p class="amenities__discription">
+        <div class="amenities__item-discription">
+          <p class="amenities__text">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
             sint. Velit officia consequat duis enim velit mollit.
           </p>
         </div>
       </li>
     </ul>
-
-    <div class="button__wrap">
-      <button class="button" data-modal-open>
-        <span>Оформити бронювання </span>
-      </button>
-    </div>
-    <a href="./hotel.html" class="link__amenities"
+    <button class="button amenities__button" type="button">
+      ОФОРМИТИ БРОНЮВАННЯ
+    </button>
+    <a class="amenities__link" href="./hotel.html"
       >Повернутися до перегляду номерів
-      <svg width="24" height="24" class="amenities__icon">
+      <svg class="amenities__icon" width="24" height="24">
         <use href="/src/images/sprite.svg#icon-cil_arrow-right32"></use>
       </svg>
     </a>
