--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,7 +14,8 @@
           ><svg class="hero__icon" width="20" height="20">
             <use href="./images/sprite.svg#icon-geo-marker12"></use></svg
           ><span class="hero__address"
-            >Україна, м. Полтава, вул. Маршала Бірюзова, 15</span
+            >Україна, м. Полтава, <br />
+            вул. Маршала Бірюзова, 15</span
           ></a
         >
       </div>
@@ -37,7 +38,7 @@
           rel="noopener noreferrer nofollow"
           class="icon-social"
         >
-          <svg class="icon-social__icon" width="24" height="24">
+          <svg class="hero__social-icon" width="24" height="24">
             <use href="./images/sprite.svg#icon-instagram"></use>
           </svg>
         </a>
@@ -49,7 +50,7 @@
           rel="noopener noreferrer nofollow"
           class="icon-social"
         >
-          <svg class="icon-social__icon" width="24" height="24">
+          <svg class="hero__social-icon" width="24" height="24">
             <use href="./images/sprite.svg#icon-facebook"></use>
           </svg>
         </a>
@@ -61,7 +62,7 @@
           rel="noopener noreferrer nofollow"
           class="icon-social"
         >
-          <svg class="icon-social__icon" width="24" height="24">
+          <svg class="hero__social-icon" width="24" height="24">
             <use href="./images/sprite.svg#icon-telegram"></use>
           </svg>
         </a>
