--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -1,5 +1,5 @@
-<section class="amenities">
-  <div class="container">
+<section class="amenities section-hotel--lemon">
+  <div class="amenities__container">
     <h2 class="amenities__title">Зручності у номері</h2>
     <p class="amenities__title-text">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
