--- a/src/sass/pages/room-luxe/_amenities.scss
+++ b/src/sass/pages/room-luxe/_amenities.scss
@@ -3,6 +3,25 @@
         background-color: $colorBgLemon;
     }
 
+           &__container {
+               max-width: 414px;
+               padding: 32px 15px;
+               margin: 0 auto;
+    
+    
+    
+                @include tablet {
+                   max-width: 1024px;
+                   padding: 40px 47px;
+               }
+    
+                           @include desktop {
+                   max-width: 1280px;
+                   padding: 48px 85px;
+                      
+               }
+           }
+
     
     &__title {
         margin-bottom: 16px;
@@ -58,25 +77,30 @@
             margin-bottom: 0;
         }
 
-        @include tablet {
+        @include desktop {
             margin-right: 159px;
-        }
-
-        @include tablet{
-
-        @include tablet {
-                max-width: 450px;
-                margin-right: 30px;
-            }
-
-            @include desktop {
-                max-width: 495px;
-                margin-right: 64px;
             }
         }
-    }
 
-    &__box {
+    //     @include tablet{
+
+    //     @include tablet {
+    //             max-width: 450px;
+    //             margin-right: 30px;
+    //         }
+
+    //         @include desktop {
+    //             max-width: 495px;
+    //             margin-right: 64px;
+    //         }
+    //     }
+    // }
+
+    &__box:not(:last-child){
+    margin-bottom: 32px;}
+
+
+    &__items {
         margin-bottom: 32px;
 
     @include tablet {
@@ -87,6 +111,8 @@
     }
 
     &__button {
+
+       
         
         @include tablet {
             position: relative;
@@ -101,10 +127,14 @@
         @include desktop {
             left: 563px;
            
+           
                         
         }
-        @include mobile{
-            margin: 0 auto 32px;}
+
+                 @include mobile {
+                     margin: 0 auto 20px;
+                 }
+        
 
         &:hover,
         &:focus {
@@ -130,14 +160,16 @@
             font-size: 20px;
             line-height: 1.2;
             gap: 16px;
+            margin-bottom: 25px;
         }
 
         @include desktop {
             margin-right: 114px;
+            margin-bottom: 33px;
             
         }
             @include mobile {
-            margin-bottom: 32px;
+            margin-bottom: 17px;
         }
 
         &:hover,
