--- a/src/partials/pages/hotel/room-for-2.html
+++ b/src/partials/pages/hotel/room-for-2.html
@@ -238,7 +238,9 @@
         </div>
       </div>
       <div class="room-wrap-bottom">
-        <a href="" class="btn btn--hotel-and-rest hotel-link">Детальніше</a>
+        <a href="./room-for-2.html" class="btn btn--hotel-and-rest hotel-link"
+          >Детальніше</a
+        >
         <button
           type="button"
           class="btn btn--hotel-and-rest"
