--- a/src/sass/layout/_details-hotel.scss
+++ b/src/sass/layout/_details-hotel.scss
@@ -55,36 +55,24 @@
   
   .details-hotel__wrap {
     max-width: 260px;
-    // margin-left: auto;
-    // display: flex;
-    // justify-content: flex-end;
-    // flex-direction: column;
-    // align-items: end;
-    // align-content: flex-end;
     margin-bottom: 48px;
-    // margin-left: 32px;
-    padding-left: 17px;
     @include tablet {
-      // margin-left: 90px;
-      // width: 610px;
       max-width: 699px;
       padding-left: 150px;
     }
     @include desktop {
-      // margin-left: 250px;
       max-width: 890px;
       padding-left: 295px;
     }
   }
 
   .details-hotel__container {
-    padding-left: 32px;
-    padding-right: 40px;
+    @include mobilemax {
+      padding-left: 32px;
+      padding-right: 40px;
+    }
+    
   }
-
-  // .menu.revers {
-  //   flex-direction: row-reverse;
-  // }
 
   .details-hotel__logo {
     display: block;
@@ -94,36 +82,26 @@
     right: -0.3em;
     @include tablet {
       margin-bottom: 16px;
+      font-size: 64px;
     }
   }
 
   .details-hotel__title {
-    // display: block;
     text-align: right;
     margin-bottom: 20px;
-    // padding-right: 12px;
     @include tablet {
       margin-bottom: 8px;
-      // padding-right: 9px;
     }
   }
 
-  // .details-hotel__title {
-  //   padding-left: 15px;
-  // }
 
   .details-hotel__text {
-    // display: block;
-    // width: 259px;
-    // font-family: 'Montserrat';
-    // font-style: normal;
     font-weight: 600;
     font-size: 12px;
     line-height: 1.25;
     letter-spacing: 0.02em;
     color: $colorTextHotel;
     @include tablet {
-      // width: 610px;
       font-size: 16px;
     }
   }
@@ -175,7 +153,6 @@
     @include tablet {
       display: flex;
       gap: 34px;
-      // flex-direction: column;
       flex-wrap: nowrap;
       align-items: flex-end;
     }
@@ -199,35 +176,32 @@
     }
   }
   
-  .slick-prev {
+  .details-hotel .slick-prev {
     left: 0;
     transform: translate(770%, -50%);
     @include mobile {
-      transform: translate(590%, -50%);
+      transform: translate(795%, -50%);
     }
     @include tablet {
-      transform: translate(1725%, -50%);
+      transform: translate(1765%, -50%);
     }
     @include desktop {
-      transform: translate(2450%, -50%);
+      transform: translate(2325%, -50%);
     }
-    // transform: translate(1700%, -50%);
   }
   
-  .slick-next {
+  .details-hotel .slick-next {
     left: 64px;
     transform: translate(770%, -50%);
     @include mobile {
-      transform: translate(590%, -50%);
+      transform: translate(795%, -50%);
     }
     @include tablet {
-      transform: translate(1725%, -50%);
+      transform: translate(1765%, -50%);
     }
     @include desktop {
-      transform: translate(2450%, -50%);
+      transform: translate(2325%, -50%);
     }
-
-    // transform: translate(1700%, -50%);
   }
   
   .slick-next:before,
@@ -259,13 +233,9 @@
   }
 
   .details-hotel .slick-list {
-    min-width: 870px !important;
+    min-width: 870px;
+    //  !important;
     @include mobilemax {
       padding-left: 103px;
     }
-    
   }
-  
-  // .slick-prev, .slick-next {
-
-  // }
