--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -10,7 +10,7 @@
     <p class="modal-price__title">ЦІНИ НА НОМЕР</p>
     <p class="modal-price__sub-title">Двомісний люкс</p>
 
-    <form name="form1" class="form form__modal-price">
+    <form class="form form__modal-price">
       <p class="modal-price__text">Категорія номеру</p>
       <div class="container__form-price">
         <div class="wrapper-input">
