--- a/src/partials/modal-room.html
+++ b/src/partials/modal-room.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden" data-modRoom>
   <div class="modal-room">
-    <button type="button" class="modal-room__btn--close" data-modal-close>
+    <button type="button" class="modal-room__btn--close" data-modRoom-close>
       <svg class="modal-room__close-icon" width="24" height="24">
         <use href="./images/sprite.svg#icon-close"></use>
       </svg>
