--- a/src/partials/pages/hotel/hero.html
+++ b/src/partials/pages/hotel/hero.html
@@ -21,10 +21,14 @@
 
       <ul class="hero__bloc-btn">
         <li class="hero__btn item">
-          <button type="button" class="btn">Забронювати столик</button>
+          <button type="button" class="btn" data-modTable-open>
+            Забронювати столик
+          </button>
         </li>
         <li class="hero__btn item">
-          <button type="button" class="btn">Забронювати номер</button>
+          <button type="button" class="btn" data-modRoom-open>
+            Забронювати номер
+          </button>
         </li>
       </ul>
     </div>
