add more modals

--- a/src/partials/details-restaurant.html
+++ b/src/partials/details-restaurant.html
@@ -75,7 +75,7 @@
         <button
           type="button"
           class="btn details-rest__button"
-          data-modTable-open
+          data-modDetTable-open
         >
           Забронювати столик
         </button>
