add number of options to 12

--- a/src/partials/modal-table.html
+++ b/src/partials/modal-table.html
@@ -47,6 +47,11 @@
                <option class="select-option" value="5">5</option>
                <option class="select-option" value="6">6</option>
                <option class="select-option" value="7">7</option>
+               <option class="select-option" value="8">8</option>
+               <option class="select-option" value="9">9</option>
+               <option class="select-option" value="10">10</option>
+               <option class="select-option" value="11">11</option>
+               <option class="select-option" value="12">12</option>
              </select>
                           
              <label class="modal__label" for="guests-number">Столик на яку кількість осіб?</label>
