add more more modals

--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -69,7 +69,7 @@
         </div>
       </li>
     </ul>
-    <button class="button amenities__button" type="button">
+    <button class="button amenities__button" type="button" data-modRoom-open>
       ОФОРМИТИ БРОНЮВАННЯ
     </button>
     <a class="amenities__link" href="./hotel.html"
