update calc modal

--- a/src/partials/modal-price3r.html
+++ b/src/partials/modal-price3r.html
@@ -30,7 +30,7 @@
             />
           </div>
 
-          <label for="numberCast" class="modal-price__label-input"
+          <label for="numberCast3" class="modal-price__label-input"
             >Кількість ночей</label
           >
         </div>
