Fix sizes for 320px display

--- a/src/sass/pages/restaurant/_menu.scss
+++ b/src/sass/pages/restaurant/_menu.scss
@@ -163,10 +163,7 @@
 }
 
 .menu__button {
-  background-color: $colorBtnBlack;
-
-  &:hover,
-  &:focus {
-    border-color: $colorAccentYellow;
+  @include mobilemax {
+    max-width: 100%;
   }
 }
