--- a/src/sass/layout/_details-hotel.scss
+++ b/src/sass/layout/_details-hotel.scss
@@ -224,7 +224,7 @@
     background: url('../images/vector-left.svg') no-repeat 0 0 / 32px 32px;
   }
   
-  .slick-track {
+  .details-hotel .slick-track {
     display: flex;
     gap: 20px;
     @media screen and (min-width: 1024px) {
